--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,31 +6,30 @@
         <img id="footer-peg-4" src="{{ site.baseurl }}/assets/img/peg_green.svg" />
     </div>
 </div>
-<footer>
-    <div class="row justify-content-center">
-        <div class="col-3">
-            <h4>Contact Us</h4>
-            <hr />
-            <p class="footer-content"><a href="mailto:mas712-staff@media.mit.edu">mas712-staff@media.mit.edu</a></p>
-        </div>
-        <div class="col-3">
-            <h4>Facilitators</h4>
-            <hr />
-            <p class="footer-content">
-                Mitch Resnick [mres@media]<br />
-                <small>Professor of Learning Research</small><br />
-                <small>MIT Media Lab</small>
-            </p>
-        </div>
-        <div class="col-3">
-            <h4>Teaching Assistants</h4>
-            <hr />
-            <p class="footer-content">
-                Lily Gabaree [???]<br />
-                Sean Hickey [hisean@media]<br />
-                Yumiko Murao [yumikom@media]<br />
-                Jaleesa Trapp [jaleesat@media]
-            </p>
-        </div>
+
+<div class="row justify-content-center footer-container">
+    <div class="col-3">
+        <h4>Contact Us</h4>
+        <hr />
+        <p class="footer-content"><a href="mailto:mas712-staff@media.mit.edu">mas712-staff@media.mit.edu</a></p>
     </div>
-</footer>
+    <div class="col-3">
+        <h4>Facilitators</h4>
+        <hr />
+        <p class="footer-content">
+            Mitch Resnick [mres@media]<br />
+            <small>Professor of Learning Research</small><br />
+            <small>MIT Media Lab</small>
+        </p>
+    </div>
+    <div class="col-3">
+        <h4>Teaching Assistants</h4>
+        <hr />
+        <p class="footer-content">
+            Lily Gabaree [???]<br />
+            Sean Hickey [hisean@media]<br />
+            Yumiko Murao [yumikom@media]<br />
+            Jaleesa Trapp [jaleesat@media]
+        </p>
+    </div>
+</div>
