--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,7 +38,18 @@
     </div>
 
     <div class="container-fluid"">
-      {{ content }}
+      <div class="row justify-content-center page-content">
+        <div class="col-8">
+          <div class="jumbotron week-jumbotron">
+            <h2 class="text-center">
+              <img class="jumbotron-peg" src="{{ site.baseurl }}/assets/img/peg_blue.svg" />
+              {{ page.title }}
+              <img class="jumbotron-peg" src="{{ site.baseurl }}/assets/img/peg_blue.svg" />
+            </h2>
+          </div>
+          <iframe id="google-doc-iframe" height="{{ page.contentHeight }}" class="google-doc-content" scrolling="no" srcdoc=""></iframe>
+        </div>
+      </div>
 
       {% include footer.html %}
     </div>
@@ -48,6 +59,15 @@
   <!-- Bootstrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    $.get("{{ page.googleDocUrl }}", function(html) {
+
+      var contents = $('#google-doc-iframe').contents();
+      contents.find('html').html(html);
+      contents.find('a[href^="http://"]').attr("target", "_blank");
+      contents.find('a[href^="https://"]').attr("target", "_blank");
+    });
+  </script>
   <script type="text/javascript">
     ;(function() {
       var seed = Math.floor(Math.random() * 10000);
