--- a/assets/css/mas712.scss
+++ b/assets/css/mas712.scss
@@ -161,9 +161,13 @@ $peg-size: 49px;
 	min-height: 500px;
 	border: none;
 	outline: none;
+  background-color: #fff;
+  padding: 31px;
+  border-radius: .3rem;
 }
 
 .week-jumbotron {
+  background-color: #f0f4f6;
 	padding-top: 2rem;
 	padding-bottom: 1.5rem;
 }
