Updated 404 error page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
         <p class="footer-content">
             Lily Gabaree [???]<br />
             Sean Hickey [hisean@media]<br />
-            Yumiko Murao [yumikom@media]<br />
+            Yumiko Murai [yumikom@media]<br />
             Jaleesa Trapp [jaleesat@media]
         </p>
     </div>
