--- a/_layouts/content-page.html
+++ b/_layouts/content-page.html
@@ -1,6 +1,3 @@
----
-
----
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
@@ -11,19 +8,11 @@
     {% include navbar.html %}
 
     <div id="background-pegs">
+      <img class="background-peg" src="{{ site.baseurl }}/assets/img/peg_red.svg" />
     </div>
 
     <div class="container-fluid"">
-
-      <div class="error-404-row row justify-content-center">
-        <div class="col-8 text-center error-404-content">
-          <h1>404!</h1>
-          <h2>Oh no, the fifth P: Perplexion!</h2>
-          <div class="error-404-text">
-            Looks like you found a page that doesn't exist.
-          </div>
-        </div>
-      </div>
+      {{ content }}
 
       {% include footer.html %}
     </div>
@@ -33,6 +22,15 @@
   <!-- Bootstrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    $.get("{{ page.googleDocUrl }}", function(html) {
+
+      var contents = $('#google-doc-iframe').contents();
+      contents.find('html').html(html);
+      contents.find('a[href^="http://"]').attr("target", "_blank");
+      contents.find('a[href^="https://"]').attr("target", "_blank");
+    });
+  </script>
   <script type="text/javascript">
     ;(function() {
       var seed = Math.floor(Math.random() * 10000);
