--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         <p class="footer-content"><a href="mailto:mas712-staff@media.mit.edu">mas712-staff@media.mit.edu</a></p>
     </div>
     <div class="col-3">
-        <h4>Facilitators</h4>
+        <h4>Lead Facilitator</h4>
         <hr />
         <p class="footer-content">
             Mitch Resnick [mres@media]<br />
@@ -26,9 +26,10 @@
         <h4>Teaching Assistants</h4>
         <hr />
         <p class="footer-content">
-            Lily Gabaree [???]<br />
+            Lily Gabaree [lilyg@media]<br />
             Sean Hickey [hisean@media]<br />
             Yumiko Murai [yumikom@media]<br />
+            Carmelo Presicce [tarmelop@media]<br />
             Jaleesa Trapp [jaleesat@media]
         </p>
     </div>
