Fixed background pegs layout bug

--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -11,7 +11,7 @@
       <img class="background-peg" src="{{ site.baseurl }}/assets/img/peg_red.svg" />
     </div>
 
-    <div class="container-fluid"">
+    <div class="container-fluid">
       <div class="row justify-content-center page-content">
         <div class="col-8">
           <div class="jumbotron week-jumbotron">
