--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         <h4>Teaching Assistants</h4>
         <hr />
         <p class="footer-content">
-            Lily Gabaree [lilyg@media]<br />
+            Lily Gabaree [gabaree@media]<br />
             Sean Hickey [hisean@media]<br />
             Yumiko Murai [yumikom@media]<br />
             Carmelo Presicce [tarmelop@media]<br />
