--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -21,7 +21,25 @@
               <img class="jumbotron-peg" src="{{ site.baseurl }}/assets/img/peg_blue.svg" />
             </h2>
           </div>
-          <iframe id="google-doc-iframe" height="{{ page.contentHeight }}" class="google-doc-content" scrolling="no" srcdoc=""></iframe>
+          <div class="google-doc-container">
+            <div class="loading-circle">
+              <div class="sk-fading-circle">
+                <div class="sk-circle1 sk-circle"></div>
+                <div class="sk-circle2 sk-circle"></div>
+                <div class="sk-circle3 sk-circle"></div>
+                <div class="sk-circle4 sk-circle"></div>
+                <div class="sk-circle5 sk-circle"></div>
+                <div class="sk-circle6 sk-circle"></div>
+                <div class="sk-circle7 sk-circle"></div>
+                <div class="sk-circle8 sk-circle"></div>
+                <div class="sk-circle9 sk-circle"></div>
+                <div class="sk-circle10 sk-circle"></div>
+                <div class="sk-circle11 sk-circle"></div>
+                <div class="sk-circle12 sk-circle"></div>
+              </div>
+            </div>
+            <iframe id="google-doc-iframe" class="google-doc-content" height="{{ page.contentHeight }}" scrolling="no" srcdoc=""></iframe>
+          </div>
         </div>
       </div>
 
@@ -33,15 +51,6 @@
   <!-- Bootstrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $.get("{{ page.googleDocUrl }}", function(html) {
-
-      var contents = $('#google-doc-iframe').contents();
-      contents.find('html').html(html);
-      contents.find('a[href^="http://"]').attr("target", "_blank");
-      contents.find('a[href^="https://"]').attr("target", "_blank");
-    });
-  </script>
   <script type="text/javascript">
     ;(function() {
       var seed = Math.floor(Math.random() * 10000);
@@ -91,6 +100,17 @@
 
       $(document).ready(generateBackgroundPegs);
     })();
+  </script>
+  <script type="text/javascript">
+    $.get("{{ page.googleDocUrl }}", function(html) {
+
+      var contents = $('#google-doc-iframe').contents();
+      contents.find('html').html(html);
+      contents.find('a[href^="http://"]').attr("target", "_blank");
+      contents.find('a[href^="https://"]').attr("target", "_blank");
+
+      $('.loading-circle').addClass('hidden');
+    });
   </script>
   </body>
 
