Basic mobile layout

--- a/_layouts/week.html
+++ b/_layouts/week.html
@@ -13,8 +13,8 @@
 
     <div class="container-fluid">
       <div class="row justify-content-center page-content">
-        <div class="col-8">
-          <div class="jumbotron week-jumbotron">
+        <div class="col-12 col-md-10 col-lg-8">
+          <div class="jumbotron week-jumbotron d-none d-sm-block">
             <h2 class="text-center">
               <img class="jumbotron-peg" src="{{ site.baseurl }}/assets/img/peg_blue.svg" />
               {{ page.title }}
