--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,12 +8,12 @@
 </div>
 
 <div class="row justify-content-center footer-container">
-    <div class="col-3">
+    <div class="col-sm-3">
         <h4>Contact Us</h4>
         <hr />
         <p class="footer-content"><a href="mailto:mas712-staff@media.mit.edu">mas712-staff@media.mit.edu</a></p>
     </div>
-    <div class="col-3">
+    <div class="col-sm-3">
         <h4>Lead Facilitator</h4>
         <hr />
         <p class="footer-content">
@@ -22,7 +22,7 @@
             <small>MIT Media Lab</small>
         </p>
     </div>
-    <div class="col-3">
+    <div class="col-sm-3">
         <h4>Teaching Assistants</h4>
         <hr />
         <p class="footer-content">
